# Multi-User-Chat-Application

./: README.md
Multi-Chat-Application/: .gitignore  CMakeLists.txt
Multi-Chat-Application/socketClient/: CMakeLists.txt  client.cpp
Multi-Chat-Application/socketServer/: CMakeLists.txt  server.cpp
Multi-Chat-Application/socketUtils/: CMakeLists.txt  socketutil.cpp  socketutil.h
